--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/highstock/4.2.6/highstock.js"></script>
 
+    <script src="https://unpkg.com/split.js/dist/split.min.js"></script>
+
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.15.3/axios.min.js"></script>
@@ -24,8 +26,16 @@
 <header>
 </header>
 <body>
-<div id="map"></div>
-<div id="chart" style="height: 500px"></div>
+
+<div class="split">
+    <div id="split-0">
+        <div id="map"></div>
+    </div>
+    <div id="split-1">
+        <div id="chart" style="height: 500px"></div>
+    </div>
+</div>
+
 <script type="text/javascript" src="resources/static/js/map.js"></script>
 </body>
 
