--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 <body>
     <div id="map"></div>
     <div id="chart"></div>
+    <div id="thingy"></div>
     <script type="text/javascript" src="resources/static/js/map.js"></script>
 </body>
 
