Added clear chart button + fixed graph drawing on datastream selection

--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 <body>
     <div id="thingy"></div>
     <div id="map"></div>
-    <div id="chart"></div>
+    <div id="chart">
+    </div>
     <script type="text/javascript" src="resources/static/js/map.js"></script>
 </body>
 
