markers in kleuren

--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
     <div id="chart" class="highcharts-figure"></div>
 
     <!--    Our code     -->
+    <script type="text/javascript" src="resources/static/js/leaflet-color-markers.js"></script>
     <script type="text/javascript" src="resources/static/js/map.js"></script>
 
 </body>
