--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
     <!--    Highcharts        -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.14.1/moment.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
 
 
     <!--    Highcharts upgrade test     -->
@@ -28,6 +28,7 @@
     <script src="https://code.highcharts.com/modules/exporting.js"></script>
     <script src="https://code.highcharts.com/modules/export-data.js"></script>
     <script src="https://code.highcharts.com/modules/accessibility.js"></script>
+    <script src="https://code.highcharts.com/themes/dark-unica.js"></script>
 
     <!--    Leaflet map     -->
     <script src="https://unpkg.com/leaflet@1.0.3/dist/leaflet.js"></script>
@@ -43,7 +44,7 @@
 <header>
 </header>
 
-<body style="background-color:red;">
+<body style="background-color:black;">
     <div id="browser">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
@@ -94,6 +95,7 @@
     <!--    Our code     -->
     <script type="text/javascript" src="resources/static/js/leaflet-color-markers.js"></script>
     <script type="text/javascript" src="resources/static/js/map.js"></script>
+    <script type="text/javascript" src="resources/static/js/helpers.js"></script>
 
 </body>
 
