--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <header>
 </header>
 
-<body style="background-color:black;">
+<body style="background-color:rgb(48, 48, 48);">
     <div id="browser">
         <nav class="navbar navbar-expand-lg bg-light">
             <div class="container-fluid">
