--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
 <header>
 </header>
 
-<body style="background-color:rgb(54, 54, 56);">
+<body>
     <div id="browser">
-        <nav class="navbar navbar-expand-lg bg-light">
+        <nav class="navbar navbar-expand-lg bg-light" style="background-color: #3f3f40 !important;">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Snuffeldb</a>
+                <a class="navbar-brand" style="color: #bfbfc0 !important;" href="#">Snuffeldb</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                     aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -56,13 +56,13 @@
                 <div class="collapse navbar-collapse" id="navbarScroll">
                     <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                            <a class="nav-link active" style="color: #bfbfc0 !important;"  aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Link</a>
+                            <a class="nav-link" style="color: #bfbfc0 !important;" href="#">Link</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarScrollingDropdown" role="button"
+                            <a class="nav-link dropdown-toggle" style="color: #bfbfc0 !important;" href="#" id="navbarScrollingDropdown" role="button"
                                 data-bs-toggle="dropdown" aria-expanded="false">
                                 Link
                             </a>
