--- a/index.html
+++ b/index.html
@@ -48,44 +48,11 @@
     <div id="browser">
         <nav class="navbar navbar-expand-lg bg-light" style="background-color: #3f3f40 !important;">
             <div class="container-fluid">
-                <a class="navbar-brand" style="color: #bfbfc0 !important;" href="#">Snuffeldb</a>
+                <a class="navbar-brand" style="color: #bfbfc0 !important;" href="#">SensorThings API Client</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                     aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                        <li class="nav-item">
-                            <a class="nav-link active" style="color: #bfbfc0 !important;" aria-current="page"
-                                href="#">Home</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" style="color: #bfbfc0 !important;" href="#">Link</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" style="color: #bfbfc0 !important;" href="#"
-                                id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Link
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
             </div>
         </nav>
         <div id="contentPanel"></div>
@@ -94,32 +61,9 @@
     <div id="map"></div>
     <div id="chart" class="highcharts-figure"></div>
 
-    <!-- Modal delete -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
-                    </button>
-                </div>
-                <div class="modal-body">
-                    ...
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!--    Our code     -->
-    <script type="text/javascript" src="resources/static/js/leaflet-color-markers.js"></script>
+    <!--    Code     -->
     <script type="text/javascript" src="resources/static/js/helpers.js"></script>
     <script type="text/javascript" src="resources/static/js/map.js"></script>
-
 </body>
 
 </html>
