--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
         <input type="text" id="inputUsername" class="form-control" placeholder="Username" required="" autofocus="">
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
 
-        <button class="btn btn-success btn-block" type="submit" onclick="validate(this.form); return false;"><i class="fas fa-sign-in-alt"></i> Sign in</button>
+        <button class="btn btn-success btn-block" type="submit"><i class="fas fa-sign-in-alt"></i> Sign in</button>
         <a href="#" id="forgot_pswd">Forgot password?</a>
         <hr>
         <button class="btn btn-primary btn-block" type="button" id="btn-signup" ><i class="fas fa-user-plus"></i> Sign up New Account</button>
@@ -26,17 +26,37 @@
         <button class="btn btn-primary btn-block" type="submit">Reset Password</button>
         <a href="#" id="cancel_reset"><i class="fas fa-angle-left"></i> Back</a>
     </form>
-    <form action="/signup/" class="form-signup">
-        <input type="text" id="user-name" class="form-control" placeholder="Full name" required="" autofocus="">
+    <form action="/signup/" class="form-signup" id="signUpForm">
         <input type="email" id="user-email" class="form-control" placeholder="Email address" required autofocus="">
         <input type="password" id="user-pass" class="form-control" placeholder="Password" required autofocus="">
-        <input type="password" id="user-repeatpass" class="form-control" placeholder="Repeat Password" required autofocus="">
         <button class="btn btn-primary btn-block" type="submit"><i class="fas fa-user-plus"></i> Sign Up</button>
         <a href="#" id="cancel_signup"><i class="fas fa-angle-left"></i> Back</a>
     </form>
     <br>
 </div>
-<script src="resources/static/js/login.js" type="text/javascript"></script>
+<script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/5.6.0/firebase-firestore.js"></script>
+<script>
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyD5e7862JlUbPQMP-BezXcrHH01VRdE3KE",
+        authDomain: "ux4stapi2021-8abe9.firebaseapp.com",
+        projectId: "ux4stapi2021-8abe9",
+        storageBucket: "ux4stapi2021-8abe9.appspot.com",
+        messagingSenderId: "666355764325",
+        appId: "1:666355764325:web:d5e1cbe607edf75bc88a8c"
+    };
+    firebase.initializeApp(config);
+
+    // make auth and firestore references
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+
+    // update firestore settings
+    db.settings({ timestampsInSnapshots: true });
+</script>
+<script src="resources/static/js/login.js"></script>
 </body>
 </html>
 
