--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" style="color: #bfbfc0 !important;" href="#">Link</a>
+                            <a class="nav-link"  id="logout" style="color: #bfbfc0 !important;" href="login.html">Logout</a>
                         </li>
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" style="color: #bfbfc0 !important;" href="#"
@@ -116,6 +116,29 @@
     </div>
 
     <!--    Our code     -->
+    <script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-firestore.js"></script>
+    <script>
+        // Initialize Firebase
+        var config = {
+            apiKey: "AIzaSyD5e7862JlUbPQMP-BezXcrHH01VRdE3KE",
+            authDomain: "ux4stapi2021-8abe9.firebaseapp.com",
+            projectId: "ux4stapi2021-8abe9",
+            storageBucket: "ux4stapi2021-8abe9.appspot.com",
+            messagingSenderId: "666355764325",
+            appId: "1:666355764325:web:d5e1cbe607edf75bc88a8c"
+        };
+        firebase.initializeApp(config);
+
+        // make auth and firestore references
+        const auth = firebase.auth();
+        const db = firebase.firestore();
+
+        // update firestore settings
+        db.settings({timestampsInSnapshots: true});
+    </script>
+    <script src="resources/static/js/login.js"></script>
     <script type="text/javascript" src="resources/static/js/leaflet-color-markers.js"></script>
     <script type="text/javascript" src="resources/static/js/helpers.js"></script>
     <script type="text/javascript" src="resources/static/js/map.js"></script>
