--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
 
         <button class="btn btn-success btn-block" type="submit"><i class="fas fa-sign-in-alt"></i> Sign in</button>
+        <p class="error text-danger center-align p-2"></p>
         <a href="#" id="forgot_pswd">Forgot password?</a>
         <hr>
         <button class="btn btn-primary btn-block modal-trigger" type="button" id="btn-signup" data-toggle="modal"
@@ -34,6 +35,7 @@
         <a href="#" id="cancel_reset"><i class="fas fa-angle-left"></i> Back</a>
     </form>
 </div>
+
 <!-- Modal -->
 <div class="modal fade" id="modal-signup">
     <div class="modal-dialog">
@@ -55,6 +57,7 @@
                     <i class="fas fa-user-plus"></i> Sign up
                 </button>
             </div>
+                <p class="error text-danger text-center"></p>
             </form>
         </div>
     </div>
