added color icons

--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
     <div id="chart" class="highcharts-figure"></div>
 
     <!--    Code     -->
+    <script type="text/javascript" src="resources/static/js/leaflet-color-markers.js"></script>
     <script type="text/javascript" src="resources/static/js/helpers.js"></script>
     <script type="text/javascript" src="resources/static/js/map.js"></script>
 </body>
