--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <div id="browser">
         <nav class="navbar navbar-expand-lg bg-light" style="background-color: #3f3f40 !important;">
             <div class="container-fluid">
-                <a class="navbar-brand" style="color: #bfbfc0 !important;" href="#">SensorThings API Client</a>
+                <a class="navbar-brand" style="color: #bfbfc0 !important;" href="#">Snuffelaars</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                     aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
