One pager with auth and login testing, dropdown for login nav

--- a/login.html
+++ b/login.html
@@ -22,6 +22,7 @@
         <input type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
 
         <button class="btn btn-success btn-block" type="submit"><i class="fas fa-sign-in-alt"></i> Sign in</button>
+<!--        <button class="btn btn-success btn-block" id="testLogout" type="submit"><i class="fas fa-sign-in-alt"></i> Logout</button>-->
         <p class="error text-danger center-align p-2"></p>
         <a href="#" id="forgot_pswd">Forgot password?</a>
         <hr>
