--- a/index.html
+++ b/index.html
@@ -4,18 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <title>SensorThings API Client</title>
-    <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no'/>
 
     <link rel="stylesheet" type="text/css" href="resources/static/css/styles.css">
 
     <!--    Bootstrap markers     -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+          integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
     <!--    Leaflet markers     -->
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css" />
-    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css" />
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.0.3/dist/leaflet.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.css"/>
+    <link rel="stylesheet" href="https://unpkg.com/leaflet.markercluster@1.3.0/dist/MarkerCluster.Default.css"/>
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css"
+          integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+
 
     <!--    Highcharts        -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
@@ -36,8 +40,8 @@
 
     <!--    Bootstrap Bundle with Popper     -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
+            integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
+            crossorigin="anonymous"></script>
 
 
 </head>
@@ -45,112 +49,136 @@
 </header>
 
 <body>
-    <div id="browser">
-        <nav class="navbar navbar-expand-lg bg-light" style="background-color: #3f3f40 !important;">
-            <div class="container-fluid">
-                <a class="navbar-brand" style="color: #bfbfc0 !important;" href="#">Snuffeldb</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
+<div id="browser">
+    <nav class="navbar navbar-expand-lg bg-light" style="background-color: #3f3f40 !important;">
+        <div class="container-fluid">
+            <a class="navbar-brand" style="color: #bfbfc0 !important;" href="#">Snuffeldb</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll"
                     aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarScroll">
-                    <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-                        <li class="nav-item">
-                            <a class="nav-link active modal-trigger" data-toggle="modal"
-                               data-target="#modal-account" style="color: #bfbfc0 !important;" aria-current="page"
-                                id ="accountBtn" href="#">Account</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link"  id="logout" style="color: #bfbfc0 !important;" href="login.html">Logout</a>
-                        </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" style="color: #bfbfc0 !important;" href="#"
-                                id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                                Link
-                            </a>
-                            <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
-                                <li><a class="dropdown-item" href="#">Action</a></li>
-                                <li><a class="dropdown-item" href="#">Another action</a></li>
-                                <li>
-                                    <hr class="dropdown-divider">
-                                </li>
-                                <li><a class="dropdown-item" href="#">Something else here</a></li>
-                            </ul>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Link</a>
-                        </li>
-                    </ul>
-                    <form class="d-flex">
-                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                        <button class="btn btn-outline-success" type="submit">Search</button>
-                    </form>
-                </div>
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+                <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" style="color: #bfbfc0 !important;" href="#"
+                           id="navbarScrollingDropdown" role="button" data-bs-toggle="dropdown"
+                           aria-expanded="false">
+                            Login
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarScrollingDropdown">
+                            <li><a class="dropdown-item  modal-trigger logged-out" data-bs-toggle="modal"
+                                   data-bs-target="#modal-signin" aria-current="page"
+                                   id="accountBtn" href="#">Sign in</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item logged-out" id="signUp" data-bs-toggle="modal"
+                                   data-bs-target="#modal-signup" href="#">Sign
+                                up</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link logged-in" id="logout" style="color: #bfbfc0 !important;" href="#">Logout</a>
+                    </li>
+                </ul>
             </div>
-        </nav>
-        <div id="contentPanel"></div>
-    </div>
-
-    <div id="map"></div>
-    <div id="chart" class="highcharts-figure"></div>
-
-    <div id="modal-account" class="modal">
-        <div class="modal-content center-align">
-            <h4>Account details</h4><br />
-            <div class="account-details"></div>
-            <div class="account-extras"></div>
         </div>
-    </div>
+    </nav>
+    <div id="contentPanel"></div>
+</div>
 
-    <!-- Modal delete -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
-        aria-hidden="true">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
-                    <button type="button" class="btn-close" data-dismiss="modal" aria-label="Close">
-                    </button>
-                </div>
+<div id="map"></div>
+<div id="chart" class="highcharts-figure"></div>
+
+<!-- Modal signin -->
+<div class="modal fade" id="modal-signin">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Sign in</h5>
+            </div>
+            <form id="signin-form">
                 <div class="modal-body">
-                    ...
+                    <input type="email" id="inputUsername" class="form-control p-3 mt-2 mb-2"
+                           placeholder="Email address" required autofocus="">
+                    <input type="password" id="inputPassword" class="form-control p-3 mt-2 mb-2" placeholder="Password"
+                           required>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button class="btn btn-success btn-block" type="submit"><i class="fas fa-sign-in-alt"></i> Sign in
+                    </button>
                 </div>
-            </div>
+                <p class="error text-danger text-center"></p>
+            </form>
         </div>
     </div>
+</div>
 
-    <!--    Our code     -->
-    <script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-auth.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-firestore.js"></script>
-    <script>
-        // Initialize Firebase
-        var config = {
-            apiKey: "AIzaSyD5e7862JlUbPQMP-BezXcrHH01VRdE3KE",
-            authDomain: "ux4stapi2021-8abe9.firebaseapp.com",
-            projectId: "ux4stapi2021-8abe9",
-            storageBucket: "ux4stapi2021-8abe9.appspot.com",
-            messagingSenderId: "666355764325",
-            appId: "1:666355764325:web:d5e1cbe607edf75bc88a8c"
-        };
-        firebase.initializeApp(config);
 
-        // make auth and firestore references
-        const auth = firebase.auth();
-        const db = firebase.firestore();
+<!-- Modal signup -->
+<div class="modal fade" id="modal-signup">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Sign up</h5>
+            </div>
+            <form id="signup-form">
+                <div class="modal-body">
+                    <input type="email" id="signupEmail" class="form-control p-3 mt-2 mb-2" placeholder="Email address"
+                           required autofocus="">
+                    <input type="password" id="signupPassword" class="form-control p-3 mt-2 mb-2"
+                           placeholder="Password">
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    <button class="btn btn-primary" type="submit" id="btn-signupForm">
+                        <i class="fas fa-user-plus"></i> Sign up
+                    </button>
+                </div>
+                <p class="error text-danger text-center"></p>
+            </form>
+        </div>
+    </div>
+</div>
 
-        // update firestore settings
-        db.settings({timestampsInSnapshots: true});
-    </script>
-    <script src="resources/static/js/login.js"></script>
-    <script type="text/javascript" src="resources/static/js/leaflet-color-markers.js"></script>
-    <script type="text/javascript" src="resources/static/js/helpers.js"></script>
-    <script type="text/javascript" src="resources/static/js/map.js"></script>
+<div id="modal-account" class="modal">
+    <div class="modal-content center-align">
+        <h4>Account details</h4><br/>
+        <div class="account-details"></div>
+        <div class="account-extras"></div>
+    </div>
+</div>
+
+
+<!--    Our code     -->
+<script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-app.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-auth.js"></script>
+<script src="https://www.gstatic.com/firebasejs/8.6.0/firebase-firestore.js"></script>
+<script>
+    // Initialize Firebase
+    var config = {
+        apiKey: "AIzaSyD5e7862JlUbPQMP-BezXcrHH01VRdE3KE",
+        authDomain: "ux4stapi2021-8abe9.firebaseapp.com",
+        projectId: "ux4stapi2021-8abe9",
+        storageBucket: "ux4stapi2021-8abe9.appspot.com",
+        messagingSenderId: "666355764325",
+        appId: "1:666355764325:web:d5e1cbe607edf75bc88a8c"
+    };
+    firebase.initializeApp(config);
+
+    // make auth and firestore references
+    const auth = firebase.auth();
+    const db = firebase.firestore();
+
+    // update firestore settings
+    db.settings({timestampsInSnapshots: true});
+</script>
+<script type="text/javascript" src="resources/static/js/leaflet-color-markers.js"></script>
+<script type="text/javascript" src="resources/static/js/helpers.js"></script>
+<script type="text/javascript" src="resources/static/js/map.js"></script>
+<script src="resources/static/js/login.js"></script>
 </body>
 
 </html>
